# dasMinfft

./: .das_module  .das_package  .gitignore  CMakeLists.txt
examples/: minfftAot.cpp  minfft_example_sinus.das
src/: dasMinfft.cpp  dasMinfft.h
